--- a/smile_vue/package.json
+++ b/smile_vue/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "node-sass": "^4.14.1",
     "vant": "^2.8.0",
     "vue": "^2.6.11"
   },
@@ -20,6 +21,7 @@
     "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
