--- a/smile_vue/package.json
+++ b/smile_vue/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "node-sass": "^4.14.1",
+    "swiper": "^5.3.8",
     "vant": "^2.8.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
